--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
+    "element-ui": "^2.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^1.19.1",
+    "svg-sprite-loader": "^4.1.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
